# scripe-standalone

./: .env.example  .gitignore  README.md  SCRIPE_COMPLETE_DOCUMENTATION.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  allowlist_sources.yaml  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260211_add_credit_expiration.py  20260211_add_referral_system.py  20260211_add_teams.py  20260211_initial_schema.py  20260211_remove_commission_system.py  20260212_add_billing.py
backend/src/app/: __init__.py  cli.py  logging_config.py  settings.py
backend/src/app/ai/: __init__.py  query_interpreter.py
backend/src/app/api/: __init__.py  main.py  rate_limit.py  routes.py
backend/src/app/auth/: __init__.py  credits.py  local.py  middleware.py  models.py
backend/src/app/billing/: __init__.py  invoice_service.py  models.py
backend/src/app/dedupe/: deduper.py
backend/src/app/email/: __init__.py  service.py
backend/src/app/enrichment/: __init__.py  hunter_service.py
backend/src/app/extractors/: __init__.py  email.py  normalizers.py  phone.py
backend/src/app/infra/: __init__.py  proxy_manager.py
backend/src/app/integrations/: __init__.py  hubspot_service.py
backend/src/app/matcher/: __init__.py  quality_scorer.py  scoring.py
backend/src/app/payments/: stripe_service.py
backend/src/app/pipeline/: runner.py
backend/src/app/quality/: __init__.py  enrichment.py  scorer.py  tiers.py  validators.py
backend/src/app/referral/: __init__.py  models.py  service.py
backend/src/scripe/: __init__.py  logging_config.py  settings.py
(+119 files in other folders)
